<resources>
    <string name="app_name">Cyclone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_now">Login Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="welcome">Welcome!</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="precautions">Precautions</string>
    <string name="help">Help</string>
    <string name="hello_user">Hello User</string>
    <string name="cyclone_status">Cyclone Status</string>
    <string name="you_are_safe">You Are Safe</string>
    <string name="last_status">Last Status: 3.4 \n40Km away</string>
    <string name="support">Support</string>
    <string name="_1">1</string>
    <string name="police">Police</string>
    <string name="view_live_map">View Live Map</string>
    <!--    <string name="precaution_desc"><b>1.Stay tuned to weather updates</b>\nKeep an eye on the latest weather updates, especially if there is a cyclone warning in your area. Follow reliable sources like the local weather bureau, news outlets, and government websites for accurate information. <b>2.Prepare an emergency kit</b>\n Create an emergency kit with essential supplies like first aid kit, water, non-perishable food, flashlight, and spare batteries. Keep it in an easily accessible place in case you need to evacuate your home quickly. <b>3.Secure your property</b>\n Secure loose objects and debris in your surroundings, especially those that can be easily carried by strong winds, such as outdoor furniture, garden tools, and toys. Secure windows, doors, and shutters properly to prevent damage to your property.<b>4.Evacuate if necessary</b>\n If you are advised to evacuate, do so immediately. Don't wait until the last minute, as conditions can change quickly, making it difficult or dangerous to leave.<b>5.Stay indoors</b>\n During the cyclone, stay indoors and avoid going outside, as it can be extremely dangerous. If you must go outside, wear protective clothing, such as a raincoat, and avoid walking or driving through floodwaters.<b>6.Keep your phone charged</b>\n Make sure your phone is fully charged, and keep a power bank handy in case of power outages. This will ensure that you can stay connected with your loved ones and emergency services during the cyclone.<b>7.Follow instructions from authorities</b>\n Listen to and follow the instructions of the authorities, such as emergency services, local council, and police. They have the expertise and experience to handle emergency situations.<b>8.Stay calm</b>\n Finally, stay calm and don't panic. Cyclones can be scary, but keeping a clear head will help you make the right decisions and stay safe.</string>-->

</resources>