<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/text_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/hello_user"
        android:textColor="@color/color_black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--        precautions-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCyclone"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_box"
        android:orientation="vertical"
        android:paddingEnd="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_greeting"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="15dp"
            android:src="@drawable/cyclone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">


            <TextView
                android:id="@+id/text_cyclone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/cyclone_status"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/you_are_safe"
                android:textColor="@color/color_green"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_cyclone_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/last_status"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/support"
        android:textColor="@color/color_black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layoutSupport"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layoutSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/btnLiveMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <!--        precautions-->
        <LinearLayout
            android:id="@+id/layoutPrecautions"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_box"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="10dp"
                android:src="@drawable/user_guide" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/precautions"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>


        <!--        help-->
        <LinearLayout
            android:id="@+id/layoutHelp"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_gravity="end"
            android:background="@drawable/round_box"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="10dp"
                android:src="@drawable/help_desk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/help"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLiveMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="32dp"
        android:paddingVertical="16dp"
        android:text="View Live Map"
        android:textColor="@color/color_blue_dark"
        app:backgroundTint="@color/color_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>